--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,6 @@
     <title>RHnet</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div class="body" id="root"></div>
   </body>
 </html>
